# UMINHO

./: README.md
BD/: README.md  RelaxBello.txt
BD/Livraria BD/: LivrariaBelloEsquema.mwb  LivrariaBelloFunctions.sql  LivrariaBelloManipulação.sql  LivrariaBelloScriptCriacao.sql  LivrariaBelloScriptPovoamento.sql  LivrariaBelloTransactions.sql  LivrariaTriggers.sql  (+2 more)
CG/Program/Engine/: CMakeLists.txt  Group.cpp  Group.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Vertex.cpp  Vertex.h  engine.cpp  parser.cpp  parser.h
CP/: Cp.hs  Exp.hs  cp1617t.blg  cp1617t.ilg  cp1617t.lhs  cp1617t.sty  cpLaws.hs  google.hs
LI4/: MentorMe.sln  README.md  package-lock.json
PL/: README.md
POO/: Actividade.ctxt  Actividade.java  Beneficiado.ctxt  Beneficiado.java  ComparatorContribuinteValor.ctxt  ComparatorContribuinteValor.java  ComparatorFactura.ctxt  ComparatorFactura.java  ComparatorFacturaValor.ctxt  ComparatorFacturaValor.java  Contribuinte.ctxt  Contribuinte.java  ContribuinteExistenteException.ctxt  ContribuinteExistenteException.java  ContribuinteInexistenteException.ctxt  ContribuinteInexistenteException.java  Educacao.ctxt  Educacao.java  Empresa.ctxt  Empresa.java  EmpresaInterior.ctxt  EmpresaInterior.java  Factura.ctxt  Factura.java  FacturaInexistenteException.ctxt  FacturaInexistenteException.java  FamiliaNumerosa.ctxt  FamiliaNumerosa.java  Geral.ctxt  Geral.java  GestaoContribuintes.ctxt  GestaoContribuintes.java  Habitacao.ctxt  Habitacao.java  Indefinida.ctxt  Indefinida.java  Individual.ctxt  Individual.java  JavaFactura.ctxt  JavaFactura.java  (+19 more)
SD/: build.xml
(+295 files in other folders)
